--- a/app/template/single.html
+++ b/app/template/single.html
@@ -9,7 +9,7 @@
 			</p>
 			<p class="entry-date"><time datetime="{{mak_post_date('yyyy-MM-ddTHH:mm:ss.sssZ')}}"><i class="fa fa-clock-o"></i>{{mak_post_date('yyyy.MM.dd HH:mm:ss')}}</time></p>
 		</div>
-		<h1 class="entry-title">{{mak_title()}}</h1>
+		<h1 class="entry-title">{{mak_entry_title()}}</h1>
 		<p class="posted-in-category" ng-if="!!mak_terms()">
 			<i class="fa fa-folder-open-o"></i>
 			<a ng-href="{{term.link}}" title="{{term.name}}" ng-repeat="term in mak_terms()">{{term.name}}</a>
@@ -20,7 +20,5 @@
 		</p>
 	</header><!-- .entry-header -->
 	<section class="entry-content" ng-bind-html="mak_content()">
-
-		{{mak_title()}}
 	</section>
 </article><!-- #post-## -->
